--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar">
       <ul class="nav-list">
-        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="../pages/about.html">Acerca de</a></li>
         <li><a href="../pages/courses.html">Cursos</a></li>
         <li><a href="../pages/gallery.html">Galería</a></li>
