falto agregar ../ para no perder la ruta de los archivos ya que se tuvo que cambiar la ubicacion del index.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -81,7 +81,7 @@
           <p>&copy; 2025 Instituto de Conducción de Maquinaria Pesada</p>
         </div>
         <div class="col text-end">
-          <a href="/index.html" class="text-white">Inicio</a> |
+          <a href="../index.html" class="text-white">Inicio</a> |
           <a href="../pages/about.html" class="text-white">Acerca de</a> |
           <a href="../pages/courses.html" class="text-white">Cursos</a> |
           <a href="../pages/gallery.html" class="text-white">Galería</a> |
