falto agregar ../ para no perder la ruta de los archivos ya que se tuvo que cambiar la ubicacion del index.html

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar">
       <ul class="nav-list">
-        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="../index.html">Inicio</a></li>
         <li><a href="../pages/about.html">Acerca de</a></li>
         <li><a href="../pages/courses.html">Cursos</a></li>
         <li><a href="../pages/gallery.html">Galería</a></li>
@@ -74,7 +74,7 @@
           <p>&copy; 2025 Instituto de Conducción de Maquinaria Pesada</p>
         </div>
         <div class="col text-end">
-          <a href="/index.html" class="text-white">Inicio</a> |
+          <a href="../index.html" class="text-white">Inicio</a> |
           <a href="../pages/about.html" class="text-white">Acerca de</a> |
           <a href="../pages/courses.html" class="text-white">Cursos</a> |
           <a href="../pages/gallery.html" class="text-white">Galería</a> |
