borrar un puntito en la ruta que lleva a la galeria

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <p>Contamos con equipos de vanguardia que permiten un entrenamiento práctico en ambientes controlados.</p>
       <p>Para ver más detalles, haz clic en el botón a continuación.</p>
       <div id="btn-center">
-        <a href="../pages/gallery.html" class="btn btn-primary">Ver Galería</a>
+        <a href="./pages/gallery.html" class="btn btn-primary">Ver Galería</a>
       </div>
   </article>
   
